# raksa-dex-aggregator

./: .gitignore  DEPLOY.md  LICENSE  README.md  render.yaml  vercel.json
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  chains.py  cli.py  main.py  models.py  service.py  swap.py
backend/app/aggregators/: __init__.py  base.py  jupiter.py  kyberswap.py  okx.py  oneinch.py  openocean.py  paraswap.py  zerox.py
backend/tests/: conftest.py  test_chains.py  test_service.py
docs/: API.md  CONTRIBUTING.md
frontend/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ExecuteSwap.tsx  Footer.tsx  Hero.tsx  QuoteTable.tsx  SwapForm.tsx  Web3Provider.tsx
