[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "raksa"
version = "0.1.0"
description = "Multi-DEX price aggregator - find the best swap rate across 1inch, Paraswap, 0x, OpenOcean, KyberSwap"
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "fikocr7" }]
keywords = ["dex", "defi", "aggregator", "crypto", "swap", "1inch", "paraswap", "0x", "uniswap"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pytest-httpx>=0.30.0",
]

[project.scripts]
raksa = "app.cli:app"

[project.urls]
Homepage = "https://github.com/fikocr7/kiro"
Repository = "https://github.com/fikocr7/kiro"
Issues = "https://github.com/fikocr7/kiro/issues"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
